feat: modified home component css

--- a/dashboard-ui/dashboard-frontend/src/app/pages/home/home.component.html
+++ b/dashboard-ui/dashboard-frontend/src/app/pages/home/home.component.html
@@ -1,16 +1,20 @@
 <div class="flex items-center justify-center h-screen bg-gradient-to-b from-[#a1b4d8] to-[#5c7bb5]">
 
   <div class="px-20 py-15 bg-white rounded-3xl drop-shadow-xl/25 text-center">
-    <p class="text-lg font-medium mb-4 font-sans text-[#1b3057]">Order Tracking System</p>
-    <div class="mb-4">
-      <input
-        class="shadow-sm appearance-none border border-gray-400 rounded-3xl w-full py-2 px-3 text-gray-700 leading-tight
-        focus:outline-none focus:ring focus:ring-gray-300 focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs
-        font-sans"
-        id="tracking-id"
-        type="text"
-        placeholder="Enter customer ID"
-      >
+    <div class="flex flex-col h-32">
+      <div class="flex-none p-2">
+        <p class="text-lg font-medium mb-4 font-sans text-[#1b3057]">Order Tracking System</p>
+      </div>
+      <div class="flex-grow p-4">
+        <input style="text-align: center"
+          class="shadow-sm appearance-none border border-[#a1b4d8] rounded-3xl w-full py-2 px-3
+          text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
+          focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
+          id="tracking-id"
+          type="text"
+          placeholder="Enter customer ID"
+        >
+      </div>
     </div>
   </div>
 
