feat: css changes home

--- a/dashboard-ui/dashboard-frontend/src/app/pages/home/home.component.html
+++ b/dashboard-ui/dashboard-frontend/src/app/pages/home/home.component.html
@@ -5,15 +5,22 @@
       <div class="flex-none p-2">
         <p class="text-lg font-medium mb-4 font-sans text-[#1b3057]">Order Tracking System</p>
       </div>
-      <div class="flex-grow p-4">
-        <input style="text-align: center"
-          class="shadow-sm appearance-none border border-[#a1b4d8] rounded-3xl w-full py-2 px-3
-          text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
-          focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
+      <div class="flex-grow p-4 flex justify-center">
+        <div class="relative rounded-3xl shadow-sm border border-[#a1b4d8] w-full max-w-sm flex items-center">
+          <input style="text-align: center; height: 100%"
+                 class="appearance-none rounded-3xl w-full py-2 px-3 pr-10
+            text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
+            focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans border-none"
           id="tracking-id"
           type="text"
           placeholder="Enter customer ID"
-        >
+          >
+          <button type="submit" class="absolute inset-y-0 right-0 flex items-center px-3 text-gray-700 bg-transparent border-none rounded-r-3xl focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#1b3057]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
   </div>
