feat: added spinning animation to button

--- a/dashboard-ui/dashboard-frontend/src/app/pages/home/home.component.html
+++ b/dashboard-ui/dashboard-frontend/src/app/pages/home/home.component.html
@@ -8,17 +8,30 @@
       <div class="flex-grow p-4 flex justify-center">
         <div class="relative rounded-3xl shadow-sm border border-[#a1b4d8] w-full max-w-sm flex items-center">
           <input style="text-align: center; height: 100%"
-                 class="appearance-none rounded-3xl w-full py-2 px-3 pr-10
-            text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
-            focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans border-none"
-          id="tracking-id"
-          type="text"
-          placeholder="Enter customer ID"
+            class="appearance-none rounded-3xl w-full py-2 px-3 pr-10
+             text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
+             focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans border-none"
+            id="tracking-id" type="text" placeholder="Enter customer ID"
+            [(ngModel)]="customerId"
+            [disabled]="isLoading"
+          />
+          <button
+            type="button"  class="absolute inset-y-0 right-0 flex items-center px-3 text-gray-700 bg-transparent border-none rounded-r-3xl focus:outline-none"
+            (click)="handleSubmit()"
+            [disabled]="isLoading"
           >
-          <button type="submit" class="absolute inset-y-0 right-0 flex items-center px-3 text-gray-700 bg-transparent border-none rounded-r-3xl focus:outline-none">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#1b3057]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-            </svg>
+            <ng-container *ngIf="!isLoading; else loadingSpinner">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#1b3057]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+              </svg>
+            </ng-container>
+
+            <ng-template #loadingSpinner>
+              <svg class="animate-spin h-4 w-4 text-[#1b3057]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+              </svg>
+            </ng-template>
           </button>
         </div>
       </div>
