--- a/dashboard-ui/dashboard-frontend/src/app/pages/order-tracker/order-tracker.component.html
+++ b/dashboard-ui/dashboard-frontend/src/app/pages/order-tracker/order-tracker.component.html
@@ -1,9 +1,9 @@
 <div class="flex items-center justify-center h-screen bg-gradient-to-b from-[#a1b4d8] to-[#5c7bb5]">
-  <div class="w-auto h-auto max-h-screen sm:w-3/4 py-4 bg-white
+  <div class="w-auto h-auto max-h-screen sm:w-3/4 py-4 bg-gray-100
   rounded-3xl drop-shadow-xl/25 text-center">
-    <div class="grid grid-rows-3 gap-4 mx-auto p-4 rounded-lg bg-gray-100 shadow-lg">
+    <div class="grid grid-rows-[1fr_3fr] gap-4 mx-auto p-4 rounded-lg bg-gray-100 shadow-lg">
       <div class="bg-gray-100 text-white p-6 rounded-md flex items-center justify-start text-xl font-bold">
-        <div class="grid grid-cols-3 gap-6 text-black">
+        <div class="grid grid-cols-3 gap-6 text-black items-start">
           <div>
             <input style="text-align: center; height: 100%"
                    class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
@@ -37,11 +37,34 @@
           </div>
         </div>
       </div>
-      <div class="bg-blue-500 text-white p-6 rounded-md flex items-center justify-center text-xl font-bold">
-        Div 2
-      </div>
-      <div class="bg-blue-500 text-white p-6 rounded-md flex items-center justify-center text-xl font-bold">
-        Div 2
+      <div class="bg-gradient-to-b from-[#a1b4d8] to-[#5c7bb5] h-auto text-white rounded-md flex items-center justify-center text-xl font-bold">
+        <div class="grid grid-cols-8 gap-4">
+          <div class="w-28 p-2 h-28 bg-white text-gray-700 text-sm font-medium rounded-3xl">
+            <p class="p-2">
+              Placed
+            </p>
+          </div>
+          <div>
+            B
+          </div>
+          <div>
+            C
+          </div>
+          <div>
+            D
+          </div>
+          <div>
+            E
+          </div>
+          <div>
+            F
+          </div>
+          <div>
+            G
+          </div>
+          <div>
+            H
+          </div>
       </div>
     </div>
   </div>
