--- a/dashboard-ui/dashboard-frontend/src/app/pages/order-tracker/order-tracker.component.html
+++ b/dashboard-ui/dashboard-frontend/src/app/pages/order-tracker/order-tracker.component.html
@@ -1,70 +1,90 @@
 <div class="flex items-center justify-center h-screen bg-gradient-to-b from-[#a1b4d8] to-[#5c7bb5]">
-  <div class="w-auto h-auto max-h-screen sm:w-3/4 py-4 bg-gray-100
+  <div class="w-11/12 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:max-w-screen-lg h-auto max-h-screen py-4 bg-gray-100
   rounded-3xl drop-shadow-xl/25 text-center">
-    <div class="grid grid-rows-[1fr_3fr] gap-4 mx-auto p-4 rounded-lg bg-gray-100 shadow-lg">
-      <div class="bg-gray-100 text-white p-6 rounded-md flex items-center justify-start text-xl font-bold">
-        <div class="grid grid-cols-3 gap-6 text-black items-start">
-          <div>
+    <div class="grid grid-rows-[1fr_6fr] gap-4 mx-auto p-4 rounded-lg bg-gray-100 shadow-lg">
+      <div class="bg-gray-100 h-16 text-white p-6 rounded-md flex items-center justify-start text-xl font-bold">
+        <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-3 gap-4 sm:gap-6 text-black items-center w-full justify-items-center">
+          <div class="w-full md:max-w-md">
             <input style="text-align: center; height: 100%"
                    class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
-             text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
-             focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
+                   text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
+                   focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
                    id="tracking-id" type="text" placeholder="Enter order ID"
             />
           </div>
-          <div>
+          <div class="w-full md:max-w-md">
             <input style="text-align: center; height: 100%"
                    class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
-             text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
-             focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
+                   text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
+                   focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
                    id="tracking-id2" type="text" placeholder="Enter customer ID"
             />
           </div>
-          <div>
-            <button type="submit" class="flex rounded-full items-center px-3 py-3 text-gray-700 bg-[#dfe5f0] border border-[#a1b4d8] focus:outline-none">
-              <ng-container *ngIf="!isLoading; else loadingSpinner">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#1b3057]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                </svg>
-              </ng-container>
-              <ng-template #loadingSpinner>
-                <svg class="animate-spin h-4 w-4 text-[#1b3057]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                  <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                  <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                </svg>
-              </ng-template>
-            </button>
+          <div class="flex justify-center w-32"> <button type="submit" class="flex rounded-full items-center px-2 py-2 text-gray-700 bg-[#dfe5f0] border border-[#a1b4d8] focus:outline-none">
+            <ng-container *ngIf="!isLoading; else loadingSpinner">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#1b3057]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+              </svg>
+            </ng-container>
+            <ng-template #loadingSpinner>
+              <svg class="animate-spin h-4 w-4 text-[#1b3057]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+              </svg>
+            </ng-template>
+          </button>
           </div>
         </div>
       </div>
-      <div class="bg-gradient-to-b from-[#a1b4d8] to-[#5c7bb5] h-auto text-white rounded-md flex items-center justify-center text-xl font-bold">
-        <div class="grid grid-cols-8 gap-4">
-          <div class="w-28 p-2 h-28 bg-white text-gray-700 text-sm font-medium rounded-3xl">
-            <p class="p-2">
-              Placed
-            </p>
+      <div class="bg-gray-200 h-auto text-white rounded-md flex items-center justify-center text-xl font-bold">
+        <div class="container mx-auto px-4 py-8">
+          <div class="flex flex-col items-start">
+            <div class="flex items-center mb-4">
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-green-500 bg-green-500 text-white">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+              </div>
+              <div class="ml-3 text-lg font-semibold text-green-700">Placed Order</div>
+            </div>
+            <div class="w-0.5 h-8 bg-green-500 ml-3.5"></div>
+            <div class="flex items-center mb-4">
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-blue-500 bg-blue-100 text-blue-700">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+              </div>
+              <div class="ml-3 text-lg font-semibold text-blue-700">Apply Offer</div>
+            </div>
+            <div class="w-0.5 h-8 bg-gray-300 ml-3.5"></div>
+            <div class="flex items-center mb-4">
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-gray-400 text-gray-600">
+                3
+              </div>
+              <div class="ml-3 text-lg text-gray-600">Payment</div>
+            </div>
+            <div class="w-0.5 h-8 bg-gray-300 ml-3.5"></div>
+            <div class="flex items-center mb-4">
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-gray-400 text-gray-600">
+                4
+              </div>
+              <div class="ml-3 text-lg text-gray-600">Process Payment</div>
+            </div>
+            <div class="w-0.5 h-8 bg-gray-300 ml-3.5"></div>
+            <div class="flex items-center mb-4">
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-gray-400 text-gray-600">
+                5
+              </div>
+              <div class="ml-3 text-lg text-gray-600">Ship</div>
+            </div>
+            <div class="w-0.5 h-8 bg-gray-300 ml-3.5"></div>
+            <div class="flex items-center">
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-gray-400 text-gray-600">
+                6
+              </div>
+              <div class="ml-3 text-lg text-gray-600">Deliver</div>
+            </div>
           </div>
-          <div>
-            B
-          </div>
-          <div>
-            C
-          </div>
-          <div>
-            D
-          </div>
-          <div>
-            E
-          </div>
-          <div>
-            F
-          </div>
-          <div>
-            G
-          </div>
-          <div>
-            H
-          </div>
+        </div>
       </div>
     </div>
   </div>
