--- a/dashboard-ui/dashboard-frontend/src/app/pages/order-tracker/order-tracker.component.html
+++ b/dashboard-ui/dashboard-frontend/src/app/pages/order-tracker/order-tracker.component.html
@@ -1,59 +1,50 @@
 <div class="flex items-center justify-center h-screen bg-gradient-to-b from-[#a1b4d8] to-[#5c7bb5]">
-  <div class="w-11/12 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:max-w-screen-lg h-auto max-h-screen py-4 bg-gray-100
-  rounded-3xl drop-shadow-xl/25 text-center">
+  <div class="w-11/12 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:max-w-screen-lg max-h-screen py-4 bg-gray-100
+  rounded-3xl drop-shadow-xl/25">
     <div class="grid grid-rows-[1fr_6fr] gap-4 mx-auto p-4 rounded-lg bg-gray-100 shadow-lg">
-      <div class="bg-gray-100 h-16 text-white p-6 rounded-md flex items-center justify-start text-xl font-bold">
+      <div class="bg-gray-100 h-16 p-6 rounded-md flex items-center justify-start">
         <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-3 gap-4 sm:gap-6 text-black items-center w-full justify-items-center">
           <div class="w-full md:max-w-md">
-            <input style="text-align: center; height: 100%"
-                   class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
+            <input class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
                    text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
-                   focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
+                   focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans text-center h-full"
                    id="tracking-id" type="text" placeholder="Enter order ID"
             />
           </div>
           <div class="w-full md:max-w-md">
-            <input style="text-align: center; height: 100%"
-                   class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
+            <input class="rounded-3xl w-full py-2 px-3 pr-10 bg-white border border-[#a1b4d8] shadow-sm
                    text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-[#5c7bb5]
-                   focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans"
+                   focus:ring-opacity-50 focus:ring-1 text-xs placeholder:text-xs font-sans text-center h-full"
                    id="tracking-id2" type="text" placeholder="Enter customer ID"
             />
           </div>
-          <div class="flex justify-center w-32"> <button type="submit" class="flex rounded-full items-center px-2 py-2 text-gray-700 bg-[#dfe5f0] border border-[#a1b4d8] focus:outline-none">
-            <ng-container *ngIf="!isLoading; else loadingSpinner">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#1b3057]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-              </svg>
-            </ng-container>
-            <ng-template #loadingSpinner>
-              <svg class="animate-spin h-4 w-4 text-[#1b3057]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-              </svg>
-            </ng-template>
-          </button>
+          <div class="flex justify-center w-32">
+            <button type="submit" class="flex rounded-full items-center px-2 py-2 text-gray-700 bg-[#dfe5f0] border border-[#a1b4d8] focus:outline-none">
+              <ng-container *ngIf="!isLoading; else loadingSpinner">
+                <mat-icon class="h-2 w-2 text-[#1b3057]">chevron_right</mat-icon>
+              </ng-container>
+              <ng-template #loadingSpinner>
+                <mat-icon class="animate-spin text-[#1b3057] text-2xl">autorenew</mat-icon>
+              </ng-template>
+            </button>
           </div>
         </div>
       </div>
-      <div class="bg-gray-200 h-auto text-white rounded-md flex items-center justify-center text-xl font-bold">
+      <div class="bg-gray-200 rounded-md flex items-center justify-center">
         <div class="container mx-auto px-4 py-8">
           <div class="flex flex-col items-start">
             <div class="flex items-center mb-4">
-              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-green-500 bg-green-500 text-white">
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-green-400 bg-green-300 text-white">
+                <mat-icon class="w-4 h-4">check</mat-icon>
               </div>
-              <div class="ml-3 text-lg font-semibold text-green-700">Placed Order</div>
+              <div class="ml-3 text-lg font-medium text-green-700">Placed Order</div>
             </div>
             <div class="w-0.5 h-8 bg-green-500 ml-3.5"></div>
             <div class="flex items-center mb-4">
-              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-blue-500 bg-blue-100 text-blue-700">
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+              <div class="w-8 h-8 flex items-center justify-center rounded-full border-2 border-blue-400 bg-blue-100 text-blue-400">
+                <mat-icon class="animate-spin text-[#1b3057] text-2xl">autorenew</mat-icon>
               </div>
-              <div class="ml-3 text-lg font-semibold text-blue-700">Apply Offer</div>
+              <div class="ml-3 text-lg font-medium text-blue-400">Apply Offer</div>
             </div>
             <div class="w-0.5 h-8 bg-gray-300 ml-3.5"></div>
             <div class="flex items-center mb-4">
